--- a/index.html
+++ b/index.html
@@ -4,252 +4,273 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fuxeris | Clixeris Previews</title>
-  <meta name="description" content="Listen to exclusive track previews from Clixeris. Contact mode4kill for more info or collabs.">
+  <meta name="description" content="Listen to exclusive track previews from Clixeris. Contact mode4kill for collabs, projects, and more.">
   <link rel="icon" href="https://i.imgur.com/N7rlQYt.png" type="image/png" />
+
+  <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    header, footer {
-      background-color: #222;
-      color: white;
-      padding: 15px 0;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 1.5rem;
-      animation: fadeIn 1s ease;
-    }
-
-    footer a {
-      color: #aaa;
-      margin: 0 10px;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-
-    footer a:hover {
-      color: white;
-    }
-
-    main {
-      padding-bottom: 40px;
-    }
-
-    .page {
-      opacity: 0;
-      pointer-events: none;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      min-height: 100vh;
-      padding: 40px 20px;
-      transition: opacity 0.5s ease, transform 0.4s ease;
-      background-color: #f4f4f4;
-      transform: translateY(10px);
-    }
-
-    .page.active {
-      opacity: 1;
-      pointer-events: auto;
-      position: relative;
-      transform: translateY(0);
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      background-color: #222;
-      color: white;
-      cursor: pointer;
-      border-radius: 8px;
-      margin-top: 20px;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-    }
-
-    button:hover {
-      background-color: #444;
-      transform: scale(1.05);
-    }
-
-    .product-card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      max-width: 300px;
-      padding: 20px;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
-
-    .product-card:hover {
-      transform: scale(1.05);
-    }
-
-    .product-card img {
-      width: 100%;
-      max-height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 10px;
-    }
-
-    .product-card iframe {
-      width: 100%;
-      border-radius: 8px;
-    }
-
-    .product-card h2 {
-      margin-top: 15px;
-      font-size: 20px;
-    }
-
-    .product-container {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 40px;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @media (max-width: 768px) {
-      .product-container {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-  </style>
 </head>
 
 <body>
-  <header>
-    <h1>🎧 Fuxeris – Clixeris Previews</h1>
+  <!-- Top Navigation -->
+  <header class="site-header">
+    <div class="container nav-inner">
+      <div class="logo">
+        <span class="logo-mark">FX</span>
+        <span class="logo-text">Fuxeris</span>
+      </div>
+
+      <button class="nav-toggle" aria-label="Toggle navigation">
+        ☰
+      </button>
+
+      <nav class="site-nav">
+        <a href="#hero">Home</a>
+        <a href="#tracks">Tracks</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <a href="game.html" class="nav-cta">Play Tic Tac Toe</a>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <!-- Home Page -->
-    <div id="home" class="page active">
-      <a href="game.html"><button>🎮 Play Tic Tac Toe</button></a>
-      <h1>Listen to these bangers 💯</h1>
-      <p>exclusive previews from Clixeris 🔊</p>
-      <button onclick="showPage('contact')">Contact Me</button>
-
-      <div class="product-container">
-        <div class="product-card" onclick="showPage('song1')">
-          <img src="https://i.imgur.com/rZmuDHv.jpeg" alt="Phantom Frequencies Cover" />
-          <iframe height="166" scrolling="no" frameborder="no" allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/phantom-frequencies&color=%23000000&auto_play=false&show_teaser=true">
-          </iframe>
-          <h2>Phantom Frequencies</h2>
+    <!-- Hero Section -->
+    <section id="hero" class="section hero">
+      <div class="container hero-inner">
+        <div class="hero-copy">
+          <p class="eyebrow">Exclusive Previews • Clixeris</p>
+          <h1>Dark, melodic <span class="accent">bangers</span> from Fuxeris.</h1>
+          <p class="hero-subtitle">
+            Listen to hand-picked previews, share them with your friends, and hit me up
+            for collabs, projects, or anything music-related.
+          </p>
+          <div class="hero-actions">
+            <a href="#tracks" class="btn primary">▶ Listen to Tracks</a>
+            <a href="game.html" class="btn ghost">🎮 Play Tic Tac Toe vs AI</a>
+          </div>
+          <p class="hero-meta">
+            New sounds dropping soon. Stay tuned.
+          </p>
         </div>
 
-        <div class="product-card" onclick="showPage('song2')">
-          <img src="https://i.imgur.com/gT9HFvc.jpeg" alt="You Oughta Know Cover" />
-          <iframe height="166" scrolling="no" frameborder="no" allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/you-oughta-know&color=%23000000&auto_play=false&show_teaser=true">
-          </iframe>
-          <h2>You Oughta Know</h2>
-        </div>
-
-        <div class="product-card" onclick="showPage('song3')">
-          <img src="https://cdn2.suno.ai/image_large_e944f38a-1c4c-416b-9065-08ea0fcf3ca0.jpeg" alt="Running Graveyard Cover" />
-          <iframe height="166" scrolling="no" frameborder="no" allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/running-graveyard&color=%23000000&auto_play=false&show_teaser=true">
-          </iframe>
-          <h2>Running Graveyard</h2>
-        </div>
-
-        <div class="product-card" onclick="showPage('song4')">
-          <img src="https://cdn2.suno.ai/image_large_f67e46ca-ab73-4325-8291-835af2a3a4f9.jpeg" alt="Total Innocence Cover" />
-          <iframe height="166" scrolling="no" frameborder="no" allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/total-innocence&color=%23000000&auto_play=false&show_teaser=true">
-          </iframe>
-          <h2>Total Innocence</h2>
+        <div class="hero-card">
+          <div class="hero-tag">Now Featuring</div>
+          <h2>“Running Graveyard”</h2>
+          <p class="hero-track-desc">
+            Haunting vocals, moody atmosphere, and a late-night drive vibe.
+          </p>
+          <div class="hero-player">
+            <iframe
+              title="Running Graveyard – SoundCloud Player"
+              height="166"
+              scrolling="no"
+              frameborder="no"
+              allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/running-graveyard&color=%23000000&auto_play=false&show_teaser=true">
+            </iframe>
+          </div>
+          <p class="hero-small">Full previews below.</p>
         </div>
       </div>
-    </div>
+    </section>
 
-    <!-- Contact Page -->
-    <div id="contact" class="page">
-      <h1>Contact Me</h1>
-      <p>Email: <a href="mailto:mode@nasa.lt">mode@nasa.lt</a></p>
-      <p>Discord: mode4kill</p>
-      <p>Socials:</p>
-      <p>
-        <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a> |
-        <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">Twitter</a> |
-        <a href="https://github.com" target="_blank" rel="noopener noreferrer">GitHub</a>
-      </p>
-      <button onclick="showPage('home')">Back to Home</button>
-    </div>
+    <!-- Tracks Section -->
+    <section id="tracks" class="section">
+      <div class="container">
+        <div class="section-header">
+          <h2>Track Previews</h2>
+          <p>Hand-picked previews from Clixeris releases. Tap in and vibe.</p>
+        </div>
 
-    <!-- Individual Song Pages -->
-    <div id="song1" class="page">
-      <h1>Phantom Frequencies</h1>
-      <img src="https://i1.sndcdn.com/artworks-qziLoI8fR4Peil7T-F1z3BA-t1080x1080.png" alt="Phantom Frequencies Cover" width="300" />
-      <iframe height="450" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/phantom-frequencies&color=%23000000&auto_play=false&show_teaser=true">
-      </iframe>
-      <button onclick="showPage('home')">Back to Home</button>
-    </div>
+        <div class="tracks-grid">
+          <!-- Phantom Frequencies -->
+          <article class="track-card">
+            <div class="track-image-wrapper">
+              <img src="https://i.imgur.com/rZmuDHv.jpeg" alt="Phantom Frequencies cover art" loading="lazy" />
+              <span class="track-tag">Atmospheric • Dark</span>
+            </div>
+            <div class="track-body">
+              <h3>Phantom Frequencies</h3>
+              <p class="track-desc">
+                Glitchy echoes and deep bass for late-night sessions.
+              </p>
+              <div class="player-wrapper">
+                <iframe
+                  title="Phantom Frequencies – SoundCloud Player"
+                  height="166"
+                  scrolling="no"
+                  frameborder="no"
+                  allow="autoplay"
+                  src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/phantom-frequencies&color=%23000000&auto_play=false&show_teaser=true">
+                </iframe>
+              </div>
+            </div>
+          </article>
 
-    <div id="song2" class="page">
-      <h1>You Oughta Know</h1>
-      <img src="https://i1.sndcdn.com/artworks-CzzlVXbRHNyiA9qU-u4ppnQ-t1080x1080.png" alt="You Oughta Know Cover" width="300" />
-      <iframe height="450" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/you-oughta-know&color=%23000000&auto_play=false&show_teaser=true">
-      </iframe>
-      <button onclick="showPage('home')">Back to Home</button>
-    </div>
+          <!-- You Oughta Know -->
+          <article class="track-card">
+            <div class="track-image-wrapper">
+              <img src="https://i.imgur.com/gT9HFvc.jpeg" alt="You Oughta Know cover art" loading="lazy" />
+              <span class="track-tag">Alt R&B • Vocals</span>
+            </div>
+            <div class="track-body">
+              <h3>You Oughta Know</h3>
+              <p class="track-desc">
+                Emotional melodies, vocal-driven, and smooth but sharp.
+              </p>
+              <div class="player-wrapper">
+                <iframe
+                  title="You Oughta Know – SoundCloud Player"
+                  height="166"
+                  scrolling="no"
+                  frameborder="no"
+                  allow="autoplay"
+                  src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/you-oughta-know&color=%23000000&auto_play=false&show_teaser=true">
+                </iframe>
+              </div>
+            </div>
+          </article>
 
-    <div id="song3" class="page">
-      <h1>Running Graveyard</h1>
-      <img src="https://i1.sndcdn.com/artworks-yMS2NqmgdyZ61heb-dmvmlA-t1080x1080.png" alt="Running Graveyard Cover" width="300" />
-      <iframe height="450" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/running-graveyard&color=%23000000&auto_play=false&show_teaser=true">
-      </iframe>
-      <button onclick="showPage('home')">Back to Home</button>
-    </div>
+          <!-- Running Graveyard -->
+          <article class="track-card">
+            <div class="track-image-wrapper">
+              <img src="https://cdn2.suno.ai/image_large_e944f38a-1c4c-416b-9065-08ea0fcf3ca0.jpeg" alt="Running Graveyard cover art" loading="lazy" />
+              <span class="track-tag">Moody • Cinematic</span>
+            </div>
+            <div class="track-body">
+              <h3>Running Graveyard</h3>
+              <p class="track-desc">
+                A haunting ride through foggy streets and neon lights.
+              </p>
+              <div class="player-wrapper">
+                <iframe
+                  title="Running Graveyard – SoundCloud Player (short)"
+                  height="166"
+                  scrolling="no"
+                  frameborder="no"
+                  allow="autoplay"
+                  src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/running-graveyard&color=%23000000&auto_play=false&show_teaser=true">
+                </iframe>
+              </div>
+            </div>
+          </article>
 
-    <div id="song4" class="page">
-      <h1>Total Innocence</h1>
-      <img src="https://i1.sndcdn.com/artworks-MdeUR6iRtprcoEGa-71fOww-t1080x1080.png" alt="Total Innocence Cover" width="300" />
-      <iframe height="450" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/total-innocence&color=%23000000&auto_play=false&show_teaser=true">
-      </iframe>
-      <button onclick="showPage('home')">Back to Home</button>
-    </div>
+          <!-- Total Innocence -->
+          <article class="track-card">
+            <div class="track-image-wrapper">
+              <img src="https://cdn2.suno.ai/image_large_f67e46ca-ab73-4325-8291-835af2a3a4f9.jpeg" alt="Total Innocence cover art" loading="lazy" />
+              <span class="track-tag">Emotive • Melodic</span>
+            </div>
+            <div class="track-body">
+              <h3>Total Innocence</h3>
+              <p class="track-desc">
+                A bittersweet mix of nostalgia and modern sound design.
+              </p>
+              <div class="player-wrapper">
+                <iframe
+                  title="Total Innocence – SoundCloud Player"
+                  height="166"
+                  scrolling="no"
+                  frameborder="no"
+                  allow="autoplay"
+                  src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/total-innocence&color=%23000000&auto_play=false&show_teaser=true">
+                </iframe>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="section section-alt">
+      <div class="container about-inner">
+        <div class="about-text">
+          <h2>About Fuxeris</h2>
+          <p>
+            I’m <strong>Fuxeris</strong>, also known as <strong>Clixeris</strong> for my previews and experiments.
+            I like to blend dark atmospheres, melodic progressions, and emotional vocals
+            into tracks that feel like a late-night story.
+          </p>
+          <p>
+            Whether it’s game soundtracks, cinematic vibes, or alternative R&B-leaning ideas,
+            I’m always trying to push a mood, not just a sound.
+          </p>
+          <p>
+            If you’re a producer, singer, dev, or creator and want to build something together,
+            hit me up. I’m always open for collabs and cool projects.
+          </p>
+        </div>
+
+        <div class="about-card">
+          <h3>Quick Stats</h3>
+          <ul>
+            <li>🎧 Genres: Alt R&B, cinematic, experimental</li>
+            <li>🕹 Also into: games, coding, and AI stuff</li>
+            <li>📂 Tools: DAWs, sound design, scripting</li>
+            <li>🤝 Open for: collabs, commissions, ideas</li>
+          </ul>
+          <a href="#contact" class="btn small primary">Contact Me</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+      <div class="container contact-inner">
+        <div class="section-header">
+          <h2>Contact & Socials</h2>
+          <p>For collabs, feedback, or anything else – let’s talk.</p>
+        </div>
+
+        <div class="contact-grid">
+          <div class="contact-card">
+            <h3>Direct Contact</h3>
+            <p>Email me directly:</p>
+            <p class="contact-highlight">
+              <a href="mailto:mode@nasa.lt">mode@nasa.lt</a>
+            </p>
+            <p>Or find me on Discord:</p>
+            <p class="contact-highlight">mode4kill</p>
+          </div>
+
+          <div class="contact-card">
+            <h3>Socials</h3>
+            <p>Follow or DM on socials:</p>
+            <div class="social-links">
+              <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a>
+              <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">Twitter</a>
+              <a href="https://github.com" target="_blank" rel="noopener noreferrer">GitHub</a>
+            </div>
+            <p class="small">
+              (More platforms coming soon.)
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 mode4kill</p>
-    <p>
-      <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a> |
-      <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">Twitter</a> |
-      <a href="https://github.com" target="_blank" rel="noopener noreferrer">GitHub</a>
-    </p>
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>&copy; 2025 <strong>mode4kill</strong>. All rights reserved.</p>
+      <p class="footer-links">
+        <a href="#hero">Back to top</a> ·
+        <a href="game.html">Play Tic Tac Toe</a>
+      </p>
+    </div>
   </footer>
 
+  <!-- Small JS for mobile nav -->
   <script>
-    function showPage(pageId) {
-      document.querySelectorAll('.page').forEach(page => {
-        page.classList.remove('active');
-      });
-      setTimeout(() => {
-        document.getElementById(pageId).classList.add('active');
-      }, 50);
-    }
+    const navToggle = document.querySelector('.nav-toggle');
+    const siteNav = document.querySelector('.site-nav');
+
+    navToggle.addEventListener('click', () => {
+      siteNav.classList.toggle('nav-open');
+    });
   </script>
 </body>
 </html>
