--- a/index.html
+++ b/index.html
@@ -9,6 +9,66 @@
 
   <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- Overrides just for the track layout -->
+  <style>
+    /* TRACK LAYOUT (NEW) */
+    .tracks-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 25px;
+      margin-top: 20px;
+    }
+
+    .track-card {
+      width: 250px;
+      background: #111;
+      color: #f5f5f5;
+      border-radius: 14px;
+      padding: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.45);
+      transition: transform 0.2s ease;
+      text-align: center;
+    }
+
+    .track-card:hover {
+      transform: scale(1.04);
+    }
+
+    .track-img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+
+    .track-card h3 {
+      margin: 6px 0;
+      font-size: 1rem;
+    }
+
+    .track-desc {
+      font-size: 0.8rem;
+      color: #ccc;
+      margin: 8px 0 12px;
+      min-height: 32px;
+    }
+
+    .track-player {
+      width: 100%;
+      border-radius: 8px;
+      height: 120px !important; /* smaller player */
+    }
+
+    @media (max-width: 700px) {
+      .track-card {
+        width: 90%;
+        max-width: 300px;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -75,7 +135,7 @@
       </div>
     </section>
 
-    <!-- Tracks Section -->
+    <!-- Tracks Section (FIXED LAYOUT) -->
     <section id="tracks" class="section">
       <div class="container">
         <div class="section-header">
@@ -84,101 +144,75 @@
         </div>
 
         <div class="tracks-grid">
+
           <!-- Phantom Frequencies -->
           <article class="track-card">
-            <div class="track-image-wrapper">
-              <img src="https://i.imgur.com/rZmuDHv.jpeg" alt="Phantom Frequencies cover art" loading="lazy" />
-              <span class="track-tag">Atmospheric • Dark</span>
-            </div>
-            <div class="track-body">
-              <h3>Phantom Frequencies</h3>
-              <p class="track-desc">
-                Glitchy echoes and deep bass for late-night sessions.
-              </p>
-              <div class="player-wrapper">
-                <iframe
-                  title="Phantom Frequencies – SoundCloud Player"
-                  height="166"
-                  scrolling="no"
-                  frameborder="no"
-                  allow="autoplay"
-                  src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/phantom-frequencies&color=%23000000&auto_play=false&show_teaser=true">
-                </iframe>
-              </div>
-            </div>
+            <img class="track-img" src="https://i.imgur.com/rZmuDHv.jpeg" alt="Phantom Frequencies cover art" loading="lazy" />
+            <h3>Phantom Frequencies</h3>
+            <p class="track-desc">
+              Glitchy echoes and deep bass for late-night sessions.
+            </p>
+            <iframe
+              class="track-player"
+              title="Phantom Frequencies – SoundCloud Player"
+              scrolling="no"
+              frameborder="no"
+              allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/phantom-frequencies&color=%23000000&auto_play=false&show_teaser=true">
+            </iframe>
           </article>
 
           <!-- You Oughta Know -->
           <article class="track-card">
-            <div class="track-image-wrapper">
-              <img src="https://i.imgur.com/gT9HFvc.jpeg" alt="You Oughta Know cover art" loading="lazy" />
-              <span class="track-tag">Alt R&B • Vocals</span>
-            </div>
-            <div class="track-body">
-              <h3>You Oughta Know</h3>
-              <p class="track-desc">
-                Emotional melodies, vocal-driven, and smooth but sharp.
-              </p>
-              <div class="player-wrapper">
-                <iframe
-                  title="You Oughta Know – SoundCloud Player"
-                  height="166"
-                  scrolling="no"
-                  frameborder="no"
-                  allow="autoplay"
-                  src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/you-oughta-know&color=%23000000&auto_play=false&show_teaser=true">
-                </iframe>
-              </div>
-            </div>
+            <img class="track-img" src="https://i.imgur.com/gT9HFvc.jpeg" alt="You Oughta Know cover art" loading="lazy" />
+            <h3>You Oughta Know</h3>
+            <p class="track-desc">
+              Emotional melodies, vocal-driven, and smooth but sharp.
+            </p>
+            <iframe
+              class="track-player"
+              title="You Oughta Know – SoundCloud Player"
+              scrolling="no"
+              frameborder="no"
+              allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/you-oughta-know&color=%23000000&auto_play=false&show_teaser=true">
+            </iframe>
           </article>
 
           <!-- Running Graveyard -->
           <article class="track-card">
-            <div class="track-image-wrapper">
-              <img src="https://cdn2.suno.ai/image_large_e944f38a-1c4c-416b-9065-08ea0fcf3ca0.jpeg" alt="Running Graveyard cover art" loading="lazy" />
-              <span class="track-tag">Moody • Cinematic</span>
-            </div>
-            <div class="track-body">
-              <h3>Running Graveyard</h3>
-              <p class="track-desc">
-                A haunting ride through foggy streets and neon lights.
-              </p>
-              <div class="player-wrapper">
-                <iframe
-                  title="Running Graveyard – SoundCloud Player (short)"
-                  height="166"
-                  scrolling="no"
-                  frameborder="no"
-                  allow="autoplay"
-                  src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/running-graveyard&color=%23000000&auto_play=false&show_teaser=true">
-                </iframe>
-              </div>
-            </div>
+            <img class="track-img" src="https://cdn2.suno.ai/image_large_e944f38a-1c4c-416b-9065-08ea0fcf3ca0.jpeg" alt="Running Graveyard cover art" loading="lazy" />
+            <h3>Running Graveyard</h3>
+            <p class="track-desc">
+              A haunting ride through foggy streets and neon lights.
+            </p>
+            <iframe
+              class="track-player"
+              title="Running Graveyard – SoundCloud Player (short)"
+              scrolling="no"
+              frameborder="no"
+              allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/running-graveyard&color=%23000000&auto_play=false&show_teaser=true">
+            </iframe>
           </article>
 
           <!-- Total Innocence -->
           <article class="track-card">
-            <div class="track-image-wrapper">
-              <img src="https://cdn2.suno.ai/image_large_f67e46ca-ab73-4325-8291-835af2a3a4f9.jpeg" alt="Total Innocence cover art" loading="lazy" />
-              <span class="track-tag">Emotive • Melodic</span>
-            </div>
-            <div class="track-body">
-              <h3>Total Innocence</h3>
-              <p class="track-desc">
-                A bittersweet mix of nostalgia and modern sound design.
-              </p>
-              <div class="player-wrapper">
-                <iframe
-                  title="Total Innocence – SoundCloud Player"
-                  height="166"
-                  scrolling="no"
-                  frameborder="no"
-                  allow="autoplay"
-                  src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/total-innocence&color=%23000000&auto_play=false&show_teaser=true">
-                </iframe>
-              </div>
-            </div>
+            <img class="track-img" src="https://cdn2.suno.ai/image_large_f67e46ca-ab73-4325-8291-835af2a3a4f9.jpeg" alt="Total Innocence cover art" loading="lazy" />
+            <h3>Total Innocence</h3>
+            <p class="track-desc">
+              A bittersweet mix of nostalgia and modern sound design.
+            </p>
+            <iframe
+              class="track-player"
+              title="Total Innocence – SoundCloud Player"
+              scrolling="no"
+              frameborder="no"
+              allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/clixeris/total-innocence&color=%23000000&auto_play=false&show_teaser=true">
+            </iframe>
           </article>
+
         </div>
       </div>
     </section>
