--- a/index.html
+++ b/index.html
@@ -240,6 +240,8 @@
         <div class="about-card">
           <h3>Quick Stats</h3>
           <ul>
+            <li> MOST OF THIS MUSIC WAS MADE WITH AI! (Except the instrumentals)
+            <li>
             <li>🎧 Genres: Alt R&B, cinematic, experimental</li>
             <li>🕹 Also into: games, coding, and AI stuff</li>
             <li>📂 Tools: DAWs, sound design, scripting</li>
