--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
           <div class="hero-actions">
             <a href="#tracks" class="btn primary">▶ Listen to Tracks</a>
             <a href="game.html" class="btn ghost">🎮 Play Tic Tac Toe vs AI</a>
+            <a href="tunes.html" class="btn ghost">🎼 Instrumentals</a>
           </div>
           <p class="hero-meta">
             New sounds dropping soon. Stay tuned.
