--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <a href="game.html" class="nav-cta">Play Tic Tac Toe</a>
-        <a href="tunes.html">Listen To Some Instrumentals</a>
+        <a href="tunes.html" class="nav-cta">Instrumentals</a>
       </nav>
     </div>
   </header>
