--- a/tunes.html
+++ b/tunes.html
@@ -48,7 +48,7 @@
               scrolling="no"
               frameborder="no"
               allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/YOUR_HANDLE/night-pulse">
+              src="https://whyp.it/embeds/track/324497?token=rh7V8">
             </iframe>
           </article>
 
@@ -71,3 +71,4 @@
   </script>
 </body>
 </html>
+
