--- a/tunes.html
+++ b/tunes.html
@@ -41,8 +41,8 @@
           <!-- Example instrumental card -->
           <article class="track-card">
             <img class="track-img" src="https://i.imgur.com/V1vGkHT.jpeg" alt="Beat Art" />
-            <h3>Night Pulse</h3>
-            <p class="track-desc">Dark synths and ambient textures.</p>
+            <h3>Moonlit Reverie</h3>
+            <p class="track-desc">Jazz medium tempo.</p>
             <iframe
               class="track-player"
               scrolling="no"
@@ -71,4 +71,5 @@
   </script>
 </body>
 </html>
+
 
