--- a/tunes.html
+++ b/tunes.html
@@ -40,7 +40,7 @@
         <div class="tracks-grid">
           <!-- Example instrumental card -->
           <article class="track-card">
-            <img class="track-img" src="https://i.imgur.com/V1vGkHT.jpeg" alt="Beat Art" />
+            <img class="track-img" src="https://cdn.whyp.it/1cbe7747-7791-4bc2-af8a-b80e18e6cf98.png" alt="Beat Art" />
             <h3>Moonlit Reverie</h3>
             <p class="track-desc">Jazz medium tempo.</p>
             <iframe
@@ -71,5 +71,6 @@
   </script>
 </body>
 </html>
+
 
 
