--- a/tunes.html
+++ b/tunes.html
@@ -37,8 +37,24 @@
           <p>Raw beats, no vocals – just vibes. Produced by Fuxeris.</p>
         </div>
 
+        <!-- Only ONE tracks-grid! -->
         <div class="tracks-grid">
-          <!-- Example instrumental card -->
+
+          <!-- Instrumental #1 -->
+          <article class="track-card">
+            <img class="track-img" src="https://cdn.whyp.it/1cbe7747-7791-4bc2-af8a-b80e18e6cf98.png" alt="Beat Art" />
+            <h3>Moonlit Reverie</h3>
+            <p class="track-desc">Jazz medium tempo.</p>
+            <iframe
+              class="track-player"
+              scrolling="no"
+              frameborder="no"
+              allow="autoplay"
+              src="https://whyp.it/embeds/track/324497?token=rh7V8">
+            </iframe>
+          </article>
+
+          <!-- Instrumental #2 -->
           <article class="track-card">
             <img class="track-img" src="https://cdn.whyp.it/1cbe7747-7791-4bc2-af8a-b80e18e6cf98.png" alt="Beat Art" />
             <h3>Moonlit Reverie</h3>
@@ -53,6 +69,7 @@
           </article>
 
           <!-- Add more instrumentals here -->
+
         </div>
       </div>
     </section>
@@ -71,6 +88,3 @@
   </script>
 </body>
 </html>
-
-
-
