--- a/tunes.html
+++ b/tunes.html
@@ -57,14 +57,14 @@
           <!-- Instrumental #2 -->
           <article class="track-card">
             <img class="track-img" src="https://cdn.whyp.it/1cbe7747-7791-4bc2-af8a-b80e18e6cf98.png" alt="Beat Art" />
-            <h3>Moonlit Reverie</h3>
-            <p class="track-desc">Jazz medium tempo.</p>
+            <h3>Swingin' in the Moonlight</h3>
+            <p class="track-desc">Jazz high tempo, exciting.</p>
             <iframe
               class="track-player"
               scrolling="no"
               frameborder="no"
               allow="autoplay"
-              src="https://whyp.it/embeds/track/324497?token=rh7V8">
+              src="https://whyp.it/embeds/track/324502?token=mxqEH">
             </iframe>
           </article>
 
@@ -88,3 +88,4 @@
   </script>
 </body>
 </html>
+
