--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <a href="#contact">Contact</a>
         <a href="game.html" class="nav-cta">Play Tic Tac Toe</a>
         <a href="tunes.html" class="nav-cta">Instrumentals</a>
+        <a href="IQ.html" class="nav-cta">Check Your IQ</a>
       </nav>
     </div>
   </header>
